fix font legibility

--- a/website/source/assets/stylesheets/hashicorp-shared/_project-utility.scss
+++ b/website/source/assets/stylesheets/hashicorp-shared/_project-utility.scss
@@ -11,8 +11,9 @@ $project-logo-pad-left: 8px;
 // Mixins
 @mixin project-a-style{
   color: $white;
-  font-weight: 300;
+  font-weight: 400;
   opacity: .75;
+  -webkit-font-smoothing: antialiased;
 
   &:hover{
     color: $white;
